test14とtest15を実装、インデントの修正をしました。